--- a/root2/index.html
+++ b/root2/index.html
@@ -111,15 +111,26 @@
             <div>
                 <img src="./image/compétence.png" class="logo">
                 <h3 class="inline">--COMPETENCE--</h3>
-                <div>
+                <div class="divform">
+                    <div class="divform2">
+                        <h6>wordpress</h6>
+                        <progress id="file" max="100" value="70" > 70% </progress>
+                        <h6>python</h6>
+                        <progress id="file" max="100" value="40" > 70% </progress>
+                        <h6>Windows/MacOS</h6>
+                        <progress id="file" max="100" value="80" > 70% </progress>
+                        <h6>HTML/CSS</h6>
+                        <progress id="file" max="100" value="30" > 70% </progress>
+                    </div>
                     <div>
-                        <label for="file">File progress:</label>
-                        <progress id="file" max="100" value="70"> 70% </progress>
-
-                        <p>wordpress</p>
-                        <p>python</p>
-                        <p>Windows/MacOS</p>
-                        <p>HTML/CSS</p>
+                        <h6>packoffice</h6>
+                        <progress id="file" max="100" value="60" > 70% </progress>
+                        <h6>Photoshop</h6>
+                        <progress id="file" max="100" value="40" > 70% </progress>
+                        <h6>streamlab,Obs</h6>
+                        <progress id="file" max="100" value="30" > 70% </progress>
+                        <h6>Visual studio code </h6>
+                        <progress id="file" max="100" value="50"> 70% </progress>
                     </div>
                 </div>
 
